2009-03-30: Jason Long <jlong@messiah.edu>
 * t/verifier.t: add support for testing DNS failures; add tests for
   detail messages of public key errors
 * t/verifier.t: add some tests of DNS failures

2009-03-30: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm (get_public_key): remember errors and
   always report them the same way

2009-03-30: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm, DkPolicy.pm: new method "name" to give a
   short name of the policy
 * scripts/dkimverify.pl: use the new fetch_policies() api to list
   the results of applicable policies

2009-03-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (fetch_policies): new method for fetching
   all applicable policies, and is guaranteed not to "die".

2009-03-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: use a global variable to specify what Timeout
   to use
 * lib/Mail/DKIM/DNS.pm: detect DNS resolver errors and report them
 * t/public_key.t: test various DNS failures

2009-03-10: Jason Long <jlong@messiah.edu>
 * t/simple_canonicalization.t: fix simple-canonicalization test, which
   broke when I removed support for prestandardized DKIM signatures

2009-03-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/*, lib/Mail/DKIM/Canonicalization/*,
   lib/Mail/DKIM/Signature.pm, t/verifier.t: remove support and tests
   for the prestandardized DKIM signatures (issue #1871948)
 * Makefile.PL: bump version

 -- VERSION 0.33 --

2009-03-10: Jason Long <jlong@messiah.edu>
 * Makefile.PL: release "0.33"

2008-11-19: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm, DkSignature.pm (DEFAULT_PREFIX): new
   method which determines what prefix to use in as_string, prettify,
   etc.
 * lib/Mail/DKIM/KeyValueList.pm (wrap): when splitting the h= field,
   only allow breaks prior to ':' symbols

2008-11-19: Jason Long <jlong@messiah.edu>
 * t/signature.t: further checks for prettify signatures (found a case